# Skincancer-CNN-from-scratch

./: .gitignore  README.md  log.txt  pyproject.toml  skin_cancer.ipynb  skincancer.py  visual.py
